<resources>
    <string name="app_name">TestLayout</string>
    <string name="user_name_text">/@e432432</string>
    <string name="title_toolbar_text">Музыка для секса</string>
    <string name="title_setting_text">Notification and Sounds</string>
    <string name="logo_text">logo</string>
    <string name="login_text">Телефон или электронный адрес</string>
    <string name="password_text">Пароль</string>
    <string name="sign_in_text">Войти</string>
    <string name="forgot_password_text">Забыли \n пароль?</string>
    <string name="plus_minus_calculator_text">+/-</string>
    <string name="_0_calculator_text">0</string>
    <string name="_1_calculator_text">1</string>
    <string name="_2_calculator_text">2</string>
    <string name="_3_calculator_text">3</string>
    <string name="_4_calculator_text">4</string>
    <string name="_5_calculator_text">5</string>
    <string name="_6_calculator_text">6</string>
    <string name="_7_calculator_text">7</string>
    <string name="_8_calculator_text">8</string>
    <string name="_9_calculator_text">9</string>
    <string name="plus_calculator_text">÷</string>
    <string name="x_calculator_text">x</string>
    <string name="plus__calculator_text">+</string>
    <string name="minus_calculator_text">-</string>
    <string name="point_calculator_text">.</string>
    <string name="equals_calculator_text">=</string>
    <string name="c_calculator_text">C</string>
    <string name="staples_calculator_text">( )</string>
    <string name="percent_calculator_text">%</string>
    <string name="sum_calculator_text">789+56</string>
    <string name="result_calculator_text">845</string>
    <string name="button_song_player">Button Song Player</string>
    <string name="button_telegram">Button Telegram</string>
    <string name="button_calculator">Button Calculator</string>
    <string name="button_authorization">Button Authorization</string>
    <string name="button_song_player_linear">Button Song Player Linear</string>
    <string name="button_telegram_linear">Button Telegram Linear</string>
    <string name="button_calculator_linear">Button calculator linear</string>
    <string name="button_authorization_linear">Button Authorization Linear</string>
    <string name="name_song_text">Angel (feat. Julie Elven)</string>
    <string name="artist_text">R. Armado Morabito</string>
    <string name="time_start">0:00</string>
    <string name="time_end">5:27</string>
    <string name="full_name_text">Иван Иванов</string>
    <string name="status_text">online</string>
    <string name="account_description_text">Account</string>
    <string name="settings_description_text">Settings</string>
    <string name="phone_number">+7 (999) 999–00–00</string>
    <string name="change_phone_number">Tap to change phone number</string>
    <string name="username_text">Username</string>
    <string name="bio_text">Солнце не ждёт</string>
    <string name="bio_label">Bio</string>
    <string name="title_menu1">Item</string>
    <string name="title_menu2">Search</string>
    <string name="title_menu3">Search</string>
</resources>