<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/buttonSongPlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_song_player"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonTelegram"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_telegram"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSongPlayer" />

    <Button
        android:id="@+id/buttonCalc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_calculator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonTelegram" />

    <Button
        android:id="@+id/buttonAuthorization"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_authorization"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonCalc" />

    <Button
        android:id="@+id/buttonSongPlayerLinear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_song_player_linear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonAuthorization" />

    <Button
        android:id="@+id/buttonTelegramLinear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_telegram_linear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSongPlayerLinear" />

    <Button
        android:id="@+id/buttonCalculatorLinear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_calculator_linear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonTelegramLinear" />

    <Button
        android:id="@+id/buttonAuthorizationLinear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_authorization_linear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonCalculatorLinear" />

</androidx.constraintlayout.widget.ConstraintLayout>