<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AuthorizationActivity2">


    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:contentDescription="@string/logo_text"
        app:srcCompat="@drawable/ic_baseline_preview" />

    <EditText
        android:id="@+id/editTextLoginLinear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:autofillHints="no"
        android:ems="10"
        android:hint="@string/login_text"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editTextPasswordLinear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:autofillHints="no"
        android:ems="10"
        android:hint="@string/password_text"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/buttonSignInLinear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:background="@color/facebookColor"
        android:text="@string/sign_in_text"
        android:textColor="#ABD0FF" />

    <TextView
        android:id="@+id/textViewForgotPasswordLinear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:gravity="center_horizontal"
        android:text="@string/forgot_password_text"
        android:textColor="@color/facebookColor"
        android:textSize="20sp"
        android:textStyle="bold" />
</LinearLayout>
