<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/telegramColor"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/textViewLogo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="20dp"
            android:layout_marginStart="@dimen/horizontal_margin"
            android:src="@drawable/ic_baseline_supervised_user_circle_24"
            app:civ_circle_background_color="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewFullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/full_name_text"
                android:textColor="@color/white"
                android:textSize="20sp" />


            <TextView
                android:id="@+id/textViewStatusUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/status_text"
                android:textColor="@color/white" />


        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewAccountDescription"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:gravity="bottom"
            android:text="@string/account_description_text"
            android:textColor="@color/telegramColor"
            android:textSize="17sp"
            android:textStyle="bold" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/textViewChangePhoto"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="end|center_horizontal"
            android:layout_margin="10dp"
            android:backgroundTint="@color/colorGrey"
            android:elevation="10dp"
            android:src="@drawable/ic_baseline_camera_alt_24"
            app:civ_circle_background_color="@color/white" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewPhone"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/phone_number" />

            <TextView
                android:id="@+id/textViewChangePhone"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/change_phone_number" />


            <View
                style="@style/separator"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewChangePhone" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewUserName"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/user_name_text" />

            <TextView
                android:id="@+id/textViewChangeUserName"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/username_text" />


            <View
                style="@style/separator"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewChangePhone" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewBioText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/bio_text" />

            <TextView
                android:id="@+id/textViewBioLabel"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/bio_label" />


            <View
                style="@style/separator"
                app:layout_constraintTop_toBottomOf="@id/textViewChangePhone" />
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewSetting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_description_text"
            android:textColor="@color/telegramColor"
            android:textSize="17sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewSettingLinear"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp" />


    </LinearLayout>

</LinearLayout>


